--- a/BPMMobile/Pages/05YaoYe/01KuaZiGongSi/SCYX0501001G2/FlowAskDetail.html
+++ b/BPMMobile/Pages/05YaoYe/01KuaZiGongSi/SCYX0501001G2/FlowAskDetail.html
@@ -365,7 +365,7 @@
                         <label for="fkhmc">客户名称<i style="color:red;">*</i></label>
                         <input type="text" id="fkhmc" name="fkhmc" readonly  data-fkhbm="" data-fkzcc="" />
                     </div>
-                    <div class="mui-input-row">
+                    <div class="mui-input-row" style="display:none;">
                         <label>库存组织</label>
                         <input type="text" id="fkcorg" name="fkcorg" readonly />
                     </div>
@@ -388,7 +388,7 @@
                     <div class="">
                         <div class="mui-input-row">
                             <label for="fzjsj">直接上级<i style="color:red;">*</i></label>
-                            <input type="text" id="fzjsj" name="fzjsj" readonly  data-fxszg="" />
+                            <input type="text" id="fzjsj" name="fzjsj" readonly data-fxszg="" />
                         </div>
                         <div class="mui-input-row">
                             <label for="fsh_dz">收货地址<i style="color:red;">*</i></label>
@@ -404,17 +404,17 @@
                         </div>
                         <div class="mui-input-row">
                             <label for="fdhrq">到货日期<i style="color:red;">*</i></label>
-                            <input type="date" id="fdhrq" name="fdhrq" class="saveCanChange" readonly/>
+                            <input type="date" id="fdhrq" name="fdhrq" class="saveCanChange" readonly />
                         </div>
                         <div class="mui-input-row">
                             <label for="fkhlx">客户类型<i style="color:red;">*</i></label>
-                            <input type="text" id="fkhlx" name="fkhlx" readonly  />
+                            <input type="text" id="fkhlx" name="fkhlx" readonly />
                         </div>
                         <div class="mui-input-row">
                             <label for="fdqqk">当前欠款</label>
                             <input type="number" id="fdqqk" name="fdqqk" readonly class="saveCanChange" />
                         </div>
-                        <div class="mui-input-row" >
+                        <div class="mui-input-row">
                             <label for="fcsxq">超授信期<i style="color:red;">*</i></label>
                             <input type="hidden" id="fcsxq" name="fcsxq" readonly />
                             <div class="mui-switch mui-switch-blue mui-disabled" id="fcsxqd">
@@ -429,6 +429,40 @@
                         <div class="mui-input-row" style="height:auto;">
                             <label for="ffh_bz">备注</label>
                             <textarea rows="3" id="ffh_bz" name="ffh_bz" readonly class="saveCanChange"></textarea>
+                        </div>
+                        <div class="mui-row cutOffLine padding">
+                            <div class="mui-col-xs-4" style="display:flex;">
+                                <label>收款条件</label>
+                                <textarea rows="2" id="f_sktj" readonly></textarea>
+                                <input type="hidden" id="f_sktj_bm" readonly />
+                            </div>
+                            <div class="mui-col-xs-4" style="display:flex;">
+                                <label>库存组织</label>
+                                <textarea rows="2" id="f_kczz" readonly></textarea>
+                                <input type="hidden" id="f_kczz_bm" readonly />
+                            </div>
+                            <div class="mui-col-xs-4" style="display:flex;">
+                                <label>仓库名称</label>
+                                <textarea rows="2" id="f_ckmc" readonly></textarea>
+                                <input type="hidden" id="f_ckbm" readonly />
+                                <input type="hidden" id="f_mchz" readonly />
+                            </div>
+                        </div>
+                        <div class="mui-row cutOffLine padding">
+                            <div class="mui-col-xs-4" style="display:flex;">
+                                <label>销售组织</label>
+                                <textarea rows="2" id="f_xszz" readonly></textarea>
+                                <input type="hidden" id="f_xszz_bm" readonly />
+                            </div>
+                            <div class="mui-col-xs-4" style="display:flex;">
+                                <label>销售员</label>
+                                <textarea rows="2" id="f_xsy" readonly></textarea>
+                                <input type="hidden" id="f_xsy_no" readonly />
+                            </div>
+                            <div class="mui-col-xs-4" style="display:flex;">
+                                <label>销往医院<i style="color:red;">*</i></label>
+                                <textarea rows="2" id="f_xwyy" readonly class="saveCanChange"></textarea>
+                            </div>
                         </div>
                     </div>
                     <a class="mui-btn mui-btn-primary mui-btn-block mui-btn-outlined" id="tjmx_fh" style="margin-top:0.5rem;display:none;">
