--- a/BPMMobile/Pages/05YaoYe/01KuaZiGongSi/SCYX0501001G2/FlowCreate.html
+++ b/BPMMobile/Pages/05YaoYe/01KuaZiGongSi/SCYX0501001G2/FlowCreate.html
@@ -366,7 +366,7 @@
                         <label for="fkhmc">客户名称<i style="color:red;">*</i></label>
                         <input type="text" id="fkhmc" name="fkhmc" readonly placeholder="请选择客户" data-fkhbm="" data-fkzcc="" />
                     </div>
-                    <div class="mui-input-row">
+                    <div class="mui-input-row" style="display:none;">
                         <label>库存组织</label>
                         <input type="text" id="fkcorg" name="fkcorg" readonly placeholder="请选择库存组织"/>
                     </div>
@@ -423,6 +423,40 @@
                             <label for="ffh_bz">备注</label>
                             <textarea rows="3" id="ffh_bz" name="ffh_bz" placeholder="请填写备注" class="saveCanChange"></textarea>
                         </div>
+                        <div class="mui-row cutOffLine padding">
+                            <div class="mui-col-xs-4" style="display:flex;">
+                                <label>收款条件</label>
+                                <textarea rows="2" id="f_sktj" ></textarea>
+                                <input type="hidden" id="f_sktj_bm" readonly/>
+                            </div>
+                            <div class="mui-col-xs-4" style="display:flex;">
+                                <label>库存组织</label>
+                                <textarea rows="2" id="f_kczz" readonly></textarea>
+                                <input type="hidden" id="f_kczz_bm" readonly />
+                            </div>
+                            <div class="mui-col-xs-4" style="display:flex;">
+                                <label>仓库名称</label>
+                                <textarea rows="2" id="f_ckmc" readonly placeholder="请选择"></textarea>
+                                <input type="hidden" id="f_ckbm" readonly/>
+                                <input type="hidden" id="f_mchz" readonly/>
+                            </div>
+                        </div>
+                        <div class="mui-row cutOffLine padding">
+                            <div class="mui-col-xs-4" style="display:flex;">
+                                <label>销售组织</label>
+                                <textarea rows="2" id="f_xszz" readonly></textarea>
+                                <input type="hidden" id="f_xszz_bm" readonly />
+                            </div>
+                            <div class="mui-col-xs-4" style="display:flex;">
+                                <label>销售员</label>
+                                <textarea rows="2" id="f_xsy" readonly></textarea>
+                                <input type="hidden" id="f_xsy_no" readonly/>
+                            </div>
+                            <div class="mui-col-xs-4" style="display:flex;">
+                                <label>销往医院<i style="color:red;">*</i></label>
+                                <textarea rows="2" id="f_xwyy" placeholder="请填写"></textarea>
+                            </div>
+                        </div>
                     </div>
                     <a class="mui-btn mui-btn-primary mui-btn-block mui-btn-outlined" id="tjmx_fh" style="margin-top:0.5rem;">
                         添加发货明细
@@ -468,6 +502,10 @@
                                 <div class="mui-input-row">
                                     <label for="fsjfhsl_menu">实际发货数量</label>
                                     <input type="number" id="fsjfhsl_menu" name="fsjfhsl_menu"  placeholder="实际发货数量" value="0" />
+                                </div>
+                                <div class="mui-input-row">
+                                    <label>套系<i style="color:red;">*</i></label>
+                                    <input type="text" id="f_tx_menu" readonly placeholder="请选择套系"/>
                                 </div>
                                 <div class="mui-input-row">
                                     <label for="ffh_je_menu">含税金额</label>
