--- a/BPMMobile/Pages/99YeWuPingTai/03JiTuanFeiYong/FYSQ990302004/FlowCreate.html
+++ b/BPMMobile/Pages/99YeWuPingTai/03JiTuanFeiYong/FYSQ990302004/FlowCreate.html
@@ -410,7 +410,7 @@
     <script type="text/javascript" src="../../../../Scripts/upload.detail.js?123"></script>
     <script type="text/javascript" src="../../../../Scripts/location.js"></script>
     <script type="text/javascript" src="../../../../Scripts/common.js"></script>
-    <script type="text/javascript" src="common.js"></script>
+    <script type="text/javascript" src="common.js?111"></script>
     <script>
 
         //var vconsole = new VConsole();
