--- a/BPMMobile/Pages/99YeWuPingTai/03JiTuanFeiYong/FYSQ990302003/FlowUndoDetail.html
+++ b/BPMMobile/Pages/99YeWuPingTai/03JiTuanFeiYong/FYSQ990302003/FlowUndoDetail.html
@@ -421,7 +421,7 @@
     <script type="text/javascript" src="../../../../Scripts/upload.detail.js"></script>
     <script type="text/javascript" src="../../../../Scripts/location.js"></script>
     <script type="text/javascript" src="../../../../Scripts/common.js"></script>
-    <script type="text/javascript" src="common.js"></script>
+    <script type="text/javascript" src="common.js?111"></script>
     <script>
 
         //console.log(navigator.userAgent);
